# LocalFirstClaw

./: .gitignore  AGENTS.md  README.md  SETUP.md  pyproject.toml
docs/: README.md  agentinterface.md  configuration.md  gateway.md  implementation-status.md  journal.md  plugins.md  provider-chutes.md  telegram.md  tui.md
docs/decisions/: 0001-journal-foundation.md
examples/config/LocalFirstClaw/: agents.yaml  channels.yaml  endpoints.yaml  models.yaml
plans/: CURRENT_HANDOFF.md  GATEWAY_CHANNEL_ROUTING.md  Gemini_AgentLoop.md  IDEA_MVP.md  IDEA_workplace.md
src/localfirstclaw/: __init__.py  __main__.py  apppaths.py  bootstrap.py  cli.py  configloader.py  envloader.py  localfirstclawconfig.py  providercheck.py  setupvalidation.py
tests/: test_appconfig.py  test_setupcli.py
