[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
agentinterface = { workspace = true }
gateway = { workspace = true }
hypothalamus = { workspace = true }
journal = { workspace = true }
tools = { workspace = true }

[project]
name = "localfirstclaw"
version = "0.1.0"
description = "Python-based personal always-on assistant system"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "litellm>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.black]
line-length = 120
target-version = ["py312"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
